<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gulliver</string>
    <string name="me">Me</string>
    <string name="no_location_detected">no location detected</string>
    <string name="main_activity_container">main activity</string>
    <string name="permission_rationale">permission rationale</string>
    <string name="permission_denied_explanation">permission denied</string>
    <string name="settings">Settings</string>
    <string name="people">People</string>
    <string name="direct_message">Direct Message</string>
    <string name="report">Report</string>
    <string name="ignore">Ignore</string>
    <string name="unignore">Unignore</string>
    <string name="leave_conversation">Leave Conversation</string>
    <string name="image_check_message">This is not an image</string>
    <string name="search">Search</string>
    <string name="search_city">Search City&#8230;</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_menu">Account Menu</string>
    <string name="add_city">Add City</string>
    <string name="clear">Clear</string>
    <string name="cities_row_admin_country">%1$s, %2$s</string>
    <string name="channel"># %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_message">Send Message</string>
    <string name="google_signin_button">Sign In with Google</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="fcm_message">fcm_message</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="channels">
        <item>general</item>
        <item>trade</item>
    </string-array>

    <string name="my_cities">My Cities</string>
</resources>