<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_gravity="start"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_main_left_drawer_circle_image_view"
                tools:srcCompat="@tools:sample/avatars"
                android:layout_width="70dp"
                android:layout_height="70dp"
                tools:src="@tools:sample/backgrounds/scenic"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginBottom="32dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:id="@+id/activity_main_left_drawer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_left_drawer_circle_image_view"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_left_drawer_circle_image_view"
                app:layout_constraintStart_toStartOf="@+id/activity_main_left_drawer_circle_image_view"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_more"
                android:id="@+id/activity_main_left_drawer_menu_image_view"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp" android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/account_menu"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cities"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:alpha="0.8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_main_left_drawer_add_city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <ImageView
                android:id="@+id/activity_main_left_drawer_add_city_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_city"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_add_circle_outline"
                app:layout_constraintBottom_toTopOf="@+id/activity_main_left_drawer_add_city_text_view"
                app:layout_constraintStart_toStartOf="@+id/activity_main_left_drawer_add_city_text_view"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_left_drawer_add_city_text_view"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/activity_main_left_drawer_add_city_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_city"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>